welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:11: error: not found: value nn
 	n=nn
          ^countTeen:19: error: type mismatch;
 found   : Unit
 required: Int
 	n=n+1
         ^countTeen:21: error: type mismatch;
 found   : Unit
 required: Int
 	n=n
         ^